--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt&family=Roboto&display=swap" rel="stylesheet">
     <!-- CSS styles -->
-    <link rel="stylesheet" href="/CharcoalHouse/CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <title>Charcoal House</title>
 </head>
 <body>
